--- a/Learned/220329.md
+++ b/Learned/220329.md
@@ -21,3 +21,34 @@ $PATH 는 쉘의 검색경로를 정의한다. 즉 특정 디렉토리에 있는
 echo $PATH
 ```
 출력되는 결과에 나오는 경로를 '순서대로' 해당 명령어를 찾아보게 된다.
+
+## JS
+### destructure
+```
+const Obj={
+    integer : 1,
+    real : 1.2,
+    string : "hello"
+};
+
+function printObj(){
+    const {integer,real,string} = Obj; //Objectdestructure
+    // Instead of console.log(`interger : ${Obj.integer}, real : ${Obj.real}, string : ${Obj.string}`); ,
+    console.log(`interger : ${integer}, real : ${real}, string : ${string}`);
+}
+```
+
+### spread operator
+객체를 감싸고 있는 단 한개의 막을 벗겨낸다.
+```
+const A = {
+  a1:1,
+  a2:2
+};
+const B = {
+  b1:3,
+  b2:4
+};
+const merged = {...A, ...B};
+->  merged = {a1:1,a2:2,b1:3,b2:4}
+```
