--- a/Learned/220414.md
+++ b/Learned/220414.md
@@ -1,8 +1,9 @@
 ## JS
 
-### new Promise
+### Promise
 - promise : 비동기 작업의 단위(를 관리하기 위한 객체) : '지금은 너가 원하는 데이터가 없는데 나중에 주겠다'   
   3가지 상태 : pending, fulfilled, rejected    
+- resolve,reject는 콜백함수이며, 파라미터로 값을 전달하면 (then함수의 인자가 받는다)작업이 끝난 뒤에도 이 값을 사용할 수 있다.
 - primose가 성공시 then(), 실패시 catch() 함수를 실행
 ```
 function job1(){
@@ -32,5 +33,4 @@ job1()
     .then(data => {
         console.log(data);
     })
-.then
 ```
