--- a/Learned/220422.md
+++ b/Learned/220422.md
@@ -3,6 +3,9 @@
 ## Exam
 컴퓨터시스템 구성 4요소 : Data,User,HW,SW   
 하드웨어 시스템의 구성요소 : Input -> Memory -> Output
+- redirection : >는 overwrite(이미 존재하면 덮어씌움), >>는 append(이미 존재하면 기존 내용에 덧붙임)
+- pipe : ```A | B``` A명령의 stdout을 B명령의 stdin으로 넣어줌.
+- tee : stdout과 파일리디렉션을 동시에 수행할 수 있음.
 
 
 ### vi editor
