--- a/Learned/220408.md
+++ b/Learned/220408.md
@@ -10,13 +10,13 @@ done
 #### remove suffix
 ```
 for i in aaa5?.c; do
-   mv $i ${i%c}java;
+   mv $i ${i%c}java; # $i에서 suffix인 c를 지움
 done
-```
 
+```
 #### remove prefix
 ```
 for i in aaa1?.c; do
-    mv $i bbb${i#aaa}
+    mv $i bbb${i#aaa} # $에서 prefix인 aaa를 지움
 done
 ```
