--- a/Learned/220405.md
+++ b/Learned/220405.md
@@ -18,5 +18,5 @@ sum=0;for ((i=0;i<10;i++)); do sum = $((sum + i)); done
 ```
 #### 커맨드라인으로 입력받는 수 모두 더하기
 ```
-sum=0; while read a; do sum=$(($sum+$a)); done; echo $sum
+sum=0; while read a; do sum=$((sum+a)); done; echo $sum
 ```
