--- a/Learned/220419.md
+++ b/Learned/220419.md
@@ -1,7 +1,17 @@
 ### link
 ### chmod
-### redirection 
-### for loop 계산
-    파일 여러개 만들고, 그 중에서 일부 확장자 바꾸기, 일부 지우기 등
+### redirection
+ : ( stdin,stdout,stderr, >, <, >> )
+### for loop 계산 
+: 덧뺄셈, 파일 여러개 만들고, 그 중에서 일부 확장자 바꾸기, 일부 지우기 등
 ### if 사용하는 명령
 ### pipe tee |&
+
+---
+
+## .examignore
+### tar
+### fg,bg,sleep
+### linux layer
+### xargs
+### grep
