--- a/Learned/220422.md
+++ b/Learned/220422.md
@@ -17,4 +17,27 @@
  - ```dd``` : 현재 줄 삭제 및 복사
  - ```p``` : 붙여넣기
  - ```/string``` : (command mode)문자열 찾기, n으로 next, N으로 previous 순회
+
+
+
+### shell script
+#### history
+- !! : 직전 명령 실행
+- !a : a로 시작하는 가장 최근 명령 실행
+- !$ : 직전 명령의 마지막 파라미터 가져옴
+ 
+#### loop
+- echo {1..5}
+- echo {1..10..2}
+- echo {1,2,3}.js
+
+#### search
+- wildcard : * (글자수 제한 없음, empty일수도 있음)
+- question mark : ? (?한 글자가 정확히 한 글자만 지칭)
+- [abc] : a or b or c
+- [ab][ab] : (a or b) + (a or b) = [aa,ab,ba,bb]
+- grep -r string : 현재 디렉토리 밑에 string 과 일치하는 문자열을 dfs로 탐색
+
+### parameter
+
 - 
