--- a/Learned/220422.md
+++ b/Learned/220422.md
@@ -38,6 +38,21 @@
 - [ab][ab] : (a or b) + (a or b) = [aa,ab,ba,bb]
 - grep -r string : 현재 디렉토리 밑에 string 과 일치하는 문자열을 dfs로 탐색
 
-### parameter
+### if
+#### hello.c
+```
+#include<stdio.h>
+int main(){
+        int a;
+        fscanf(stdin,"%d",&a);
+        fprintf(stdout,"%d\n",a);
+        fprintf(stderr,"%d\n",a+10);
+        return a;
+}
+```
 
-- 
+```
+# /bin/bash
+if ./a.out; then echo "true"; fi 
+# input으로 0을 넣으면 true출력, 그 외에는 안 나옴
+```
