--- a/Learned/220422.md
+++ b/Learned/220422.md
@@ -56,3 +56,11 @@ int main(){
 if ./a.out; then echo "true"; fi 
 # input으로 0을 넣으면 true출력, 그 외에는 안 나옴
 ```
+
+```
+# /bin/bash
+if [ 1 = 2 ]; then
+    echo "same"
+    else echo "diff"
+fi
+```
