--- a/Learned/220408.md
+++ b/Learned/220408.md
@@ -10,7 +10,7 @@ done
 #### remove suffix
 ```
 for i in aaa5?.c; do
-   mv $i ${i%c}java; # $i에서 suffix가 c인 파일을 바꿈
+   mv $i ${i%c}java; # $i에서 suffix가 c인 파일의 이름을 java로 바꿈
 done
 
 ```
