--- a/Learned/220422.md
+++ b/Learned/220422.md
@@ -50,7 +50,13 @@ int main(){
         return a;
 }
 ```
+```
+# /bin/bash
+./a.out <<< 10 
+./a.out <<< 1000
 
+echo $? # 10 입력 후 실행하면 10출력되지만, 1000 입력 후에는 값이 깨짐. [0,255] 범위의 수만 가능.
+```
 ```
 # /bin/bash
 if ./a.out; then echo "true"; fi 
