--- a/Learned/220405.md
+++ b/Learned/220405.md
@@ -14,7 +14,8 @@ done
 ```
 #### 0부터 10미만의 수의 누적합 구하기
 ```
-sum=0;for ((i=0;i<10;i++)); do sum = $((sum + i)); done
+sum=0;
+for ((i=0;i<10;i++)); do sum = $((sum + i)); done
 ```
 #### 커맨드라인으로 입력받는 수 모두 더하기
 ```
