--- a/Learned/220425.md
+++ b/Learned/220425.md
@@ -79,11 +79,7 @@ for i in {1..10..2}; do
     echo $i
 done
 ```
-#### 0부터 10미만의 수의 누적합 구하기
-```
-sum=0;
-for ((i=0;i<10;i++)); do sum = $((sum + i)); done
-```
+
 #### 커맨드라인으로 입력받는 수 모두 더하기
 ```
 sum=0
@@ -167,9 +163,9 @@ int main(){
 ```
 # /bin/bash
 ./a.out <<< 10 
-./a.out <<< 1000
-
-echo $? # 10 입력 후 실행하면 10출력되지만, 1000 입력 후에는 값이 깨짐. [0,255] 범위의 수만 가능.
+./a.out <<< 1000s
+echo $?
+ # 10 입력 후 실행하면 10출력되지만, 1000 입력 후에는 값이 깨짐. [0,255] 범위의 수만 가능.
 ```
 ```
 # /bin/bash
@@ -178,6 +174,14 @@ if ./a.out
     echo "true"
 fi 
 # input으로 0을 넣으면 true출력, 그 외에는 안 나옴
+```
+
+```
+ if [[ -z $str ]]
+    then 
+    echo "empty"
+fi
+# str이 빈 문자열이면 empty 출력
 ```
 
 ```
