--- a/Learned/220514.md
+++ b/Learned/220514.md
@@ -7,4 +7,4 @@ queue<pair<int,int>> q;
 auto &[cur,y] = q.front();  // error!
 q.pop(); 
 ```
-pair<int,int>로 되어있는 queue에서 값을 받아올 때  레퍼런스 변수인 &로 받아오고 pop하면 에러가 날 수 있다. 내가 포인터를 기반으로 참조하고 있는 변수를 pop하면 사라져버리니 레퍼런스 변수는 참조할 곳을 잃어버린 셈. 따라서 queue같이 값을 받아오고 pop을 하는 상황에서는 &를 사용해서는 안된다.
+pair<int,int>로 되어있는 queue에서 값을 받아올 때  레퍼런스 변수인 &로 받아오고 pop하면 에러가 날 수 있다. 내가 포인터를 기반으로 참조하고 있는 변수를 pop하면 사라져버리니 레퍼런스 변수는 참조할 곳을 잃어버린 셈. 따라서 queue같이 값을 받아오`고 pop을 하는 상황에서는 &를 사용해서는 안된다.
