--- a/Learned/220614.md
+++ b/Learned/220614.md
@@ -1,9 +1,10 @@
 # OSS
 
-- stdout, stdin ,stderr
-- if
-- $?
-- for,while loop
-- git commit,branch, conflict, merge, reset
-- open source license, open source로 돈을 버는 방법
+- symbolic link, hard link
 - chmod
+- redirection(stdout, stdin ,stderr)
+- 실행문에 if
+- $?
+- for,while loop로 덧셈
+- git commit,branch, conflict, merge, reset
+- open source license - open source로 돈을 버는 방법
