--- a/Learned/220619.md
+++ b/Learned/220619.md
@@ -23,6 +23,12 @@ git reset [option] [commit ID] : 특정 commit ID의 시점으로 되돌린다.
 git reset --soft [commit ID] : HEAD가 특정 시점의 커밋을 가리킨다. working directory와 staging은 그대로이다.
 git reset --mixed [commit ID] (default) : HEAD가 특정 시점의 커밋을 가리킨다. staging은 특정 시점으로 변하지만 working directory는 그대로이다.
 git reset --hard [commit ID] : HEAD가 특정 시점의 커밋을 가리킨다. staging과 working directory 모두 특정 시점으로 변한다. 만약 현재 상태를 commit 하지 않고 hard reset을 실행하면 데이터가 모두 날라가버린다.
-git reset HEAD^ : 가장 최근에 했던 commit 이전 상태로 돌아감.
+git reset [option[ HEAD^ : 가장 최근에 했던 commit 이전 상태로 돌아감.
+git reset [option] HEAD^~# : 가장 최근에 했던 #번의 commit 이전 상태로 돌아감.
 
+```
+
+```
+git restore : working directory에서 변경된 파일을 다시 원래대로 되돌리고 싶을 때 (아직 add는 하지 않은 상황)
+git restore --staged : add한 뒤에 원래대로 되돌리고 싶을 때
 ```
