--- a/Learned/220614.md
+++ b/Learned/220614.md
@@ -1,10 +1,202 @@
 # OSS
 
-- symbolic link, hard link
-- chmod
-- redirection(stdout, stdin ,stderr)
-- 실행문에 if
-- $?
-- for,while loop로 덧셈
-- git commit,branch, conflict, merge, reset
-- open source license - open source로 돈을 버는 방법
+## 1. symbolic link, hard link
+
+```
+# /bin/bash
+ln [sourceFile] [destFile] : hardlink
+ln -s [sourceFile] [destFile] : soft(symbolic) link
+```
+
+- 하드링크는 inode가 같으며, 컴퓨터 내부상으로는 실제로 하나의 파일로 동작한다.
+- 심볼릭링크는 inode가 다르며, 바로가기 같은 개념으로 동작한다.
+- softlink 파일을 cp하면 softlink파일이 아닌 원본 파일을 갖고 온다.
+- 디렉토리를 복사하면 softlink는 그대로 복사되지만, hardlink의 inode는 깨진다.
+
+---
+
+## 2. executable file , chmod
+
+```
+# /bin/bash
+# "ls -ldi *"라는 쉘 명령어를 list_all 파일에 저장한 뒤에, 실행시키기
+
+echo "ls -ldi *" > list_all
+chmod 700 list_all
+./list_all > result.txt
+```
+
+---
+
+## 3. redirection(stdout, stdin ,stderr)
+
+```
+0< : stdin
+1> : stdout
+2> : stderr
+```
+
+```
+# /bin/bash
+./a.out < input > result    # input의 값을 stdin으로 넣고 그 stdout 결과를 input에 작성(덮어씌움)
+./a.out < input 2> result    # input의 값을 stdin으로 넣고 그 stderr 결과를 input에 작성(덮어씌움)
+./a.out < input >& result    # input의 값을 stdin으로 넣고 그 stdout,sterr 결과를 input에 작성
+./a.out < input >> result    # input의 값을 stdin으로 넣고 그 stdout 결과를 input에 작성(덧붙임)
+./a.out | b.out    # a.out의 실행 stdout 결과값을 b.out의 stdin으로 넣어줌
+./a.out | tee result    # a.out의 실행 stdout 결과값을 콘솔창과 result 둘다 출력함
+./a.out |& tee result    # a.out의 실행 stdout,stderr 결과값을 콘솔창과 result 둘다 출력함
+```
+
+---
+
+## 4. 실행문에 if ,$?
+
+```
+#include<stdio.h>
+int main(){
+        int a;
+        fscanf(stdin,"%d",&a);
+        fprintf(stdout,"%d\n",a);
+        fprintf(stderr,"%d\n",a+10);
+        return a;
+}
+```
+
+```
+# /bin/bash
+./a.out <<< 10
+./a.out <<< 1000
+echo $?
+# $?란 가장 최근에 종료된 커맨드의 종료 상태를 나타낸다.
+# 10 입력 후 실행하면 10출력되지만, 1000 입력 후에는 값이 깨짐. [0,255] 범위의 수만 가능.
+```
+
+```
+./a.out <<< 100
+echo $(($? + 100))
+# 200 출력됨
+```
+
+```
+# /bin/bash
+if ./a.out
+    then
+    echo "true"
+fi
+# a.out의 input으로 0을 넣으면 true출력, 그 외에는 안 나옴
+```
+
+```
+# /bin/bash
+if [ 1 = 2 ]; then
+    echo "same"
+    else echo "diff"
+fi
+```
+
+---
+
+## 5. for,while loop로 덧셈
+
+### loop
+
+- echo {1..5}
+- echo {1..10..2}
+- echo {1,2,3}.js
+
+#### [0,10) 범위의 수 더하기
+
+```
+for ((i=0;i<10;i++)); do
+    echo $i
+done
+```
+
+#### 1부터 10까지 2 간격의 수 구하기
+
+```
+for i in {1..10..2}; do
+    echo $i
+done
+```
+
+#### 커맨드라인으로 입력받는 수 모두 더하기
+
+```
+sum=0
+while read a; do
+    sum=$((sum+a))
+    done
+echo $sum
+```
+
+#### input파일에 들어있는 수 모두 더하기
+
+```
+cat input | { while read a
+ 	do
+		sum=$((sum+a))
+       	done
+	echo $sum
+}
+```
+
+#### [000,009] 숫자 출력
+
+```
+#/bin/bash
+
+for i in {0..9}; do
+	printf "%04d\n" $i
+done
+```
+
+#### 0 부터 100까지 누적합 구하기
+
+```
+#/bin/bash
+
+sum=0
+for((i=0;i<100;i++)); do
+	sum=$(($sum+$i));
+done
+echo $sum
+```
+
+#### create files using shell loop
+
+```
+for i in {1..100}; do
+    touch aaa${i}.c;
+done
+```
+
+#### remove suffix
+
+- %[문자열] 을 통해서 특정 suffix를 찾아낼 수 있다.
+
+```
+for i in aaa5?.c; do
+   mv $i ${i%c}java;
+done
+# $i에서 suffix가 c인 파일의 이름을 java로 바꿈
+```
+
+- #[문자열] 을 통해서 특정 prefix를 찾아낼 수 있다.
+
+#### remove prefix
+
+```
+for i in aaa1?.c; do
+    mv $i bbb${i#aaa}
+done
+# $i에서 prefix가 aaa1?.c인 파일을 bbb1?.c로 바꿈
+```
+
+---
+
+## 6. git commit,branch, conflict, merge, reset --hard
+
+---
+
+## 7. open source license로 할 수 있는 거 없는 거, open source로 돈을 버는 방법
